load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gebn/bmc_exporter
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["bmc_exporter.go"],
    importpath = "github.com/gebn/bmc_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//handler/bmc:go_default_library",
        "//handler/root:go_default_library",
        "//session/file:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_gebn_go_stamp//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    ],
)

go_binary(
    name = "bmc_exporter",
    embed = [":go_default_library"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
