load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/gebn/bmc_exporter
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["bmc_exporter.go"],
    importpath = "github.com/gebn/bmc_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//bmc/collector:go_default_library",
        "//bmc/target:go_default_library",
        "//handler/bmc:go_default_library",
        "//handler/root:go_default_library",
        "//session/file:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_gebn_go_stamp_v2//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    ],
)

go_binary(
    name = "bmc_exporter",
    embed = [":go_default_library"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "archive",
    srcs = [":bmc_exporter"],
    extension = "tar.gz",
    package_dir = "bmc_exporter",
)

container_image(
    name = "image",
    cmd = ["/bmc_exporter"],
    files = [":bmc_exporter"],
    ports = ["9622/tcp"],
    stamp = True,  # set correct creation_time
)

container_push(
    name = "push-commit",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "gebn/bmc_exporter",
    tag = "{STABLE_STAMP_COMMIT_SHORT}",
)

container_push(
    name = "push-release",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "gebn/bmc_exporter",
    tag = "{STABLE_STAMP_VERSION}",
)
