load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bmc_info.go",
        "chassis_status.go",
        "doc.go",
        "power_draw.go",
        "processor_temperatures.go",
    ],
    importpath = "github.com/gebn/bmc_exporter/bmc/subcollector",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gebn_bmc//:go_default_library",
        "@com_github_gebn_bmc//pkg/dcmi:go_default_library",
        "@com_github_gebn_bmc//pkg/ipmi:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)
