load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["provider.go"],
    importpath = "github.com/gebn/bmc_exporter/session/file",
    visibility = ["//visibility:public"],
    deps = [
        "//session:go_default_library",
        "@com_github_go_yaml_yaml//:go_default_library",
    ],
)
